@@ -6670,4 +6670,6 @@ in screen distances, reducing precision loss (ferrieux)
 
 2009-10-29 (bug fix)[1825353] Russian Windows tiny fonts problem (thoyts)
 
+2009-11-03 (bug fix)[2891541] fix grab behaviour for main window (thoyts)
+
 --- Released 8.5.8, November xx, 2009 --- See ChangeLog for details ---
