@@ -1,3 +1,8 @@
+2009-11-03  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* win/tkWinWm.c: [Bug 2891541] Permit normal behaviour on
+	Windows for a grabbed toplevel when it is the main window.
+
 2009-11-03  Don Porter  <dgp@users.sourceforge.net>
 
 	*** 8.5.8 TAGGED FOR RELEASE ***
